syntax = "proto3";

message Library_GetFileTag_Request {
  string sourceFileUrl = 1;
  int32 field = 2;
}

message Library_GetFileTag_Response {
  string result = 1;
}

