syntax = "proto3";

message Library_QueryFilesEx_Request {
  string query = 1;
}

message Library_QueryFilesEx_Response {
  bool result = 1;
  repeated string files = 2;
}

